# recsys-examples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_BUILD_AND_RUN_DEMO.md  README.md  STYLE_GUIDE.md  print_env.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmark/: README.md
corelib/dynamicemb/: .gitmodules  CMakeLists.txt  DynamicEmb_APIs.md  README.md  STYLE_GUIDE.md  setup.py
corelib/dynamicemb/benchmark/: README.md  benchmark_batched_dynamicemb_tables.py  benchmark_batched_dynamicemb_tables.sh  benchmark_embedding_collection.py  benchmark_embedding_collection.sh  benchmark_utils.py  dataset_generator.py
corelib/dynamicemb/dynamicemb/: __init__.py  admission_strategy.py  batched_dynamicemb_compute_kernel.py  batched_dynamicemb_function.py  batched_dynamicemb_tables.py  construct_twin_module.py  dump_load.py  dynamicemb_config.py  embedding_admission.py  exportable_tables.py  get_planner.py  incremental_dump.py  index_range_meta.py  initializer.py  input_dist.py  key_value_table.py  lookup_meta.py  optimizer.py  scored_hashtable.py  types.py  unique_op.py  utils.py
corelib/dynamicemb/dynamicemb/planner/: __init__.py  enumerators.py  planner.py  rw_sharding.py
corelib/dynamicemb/dynamicemb/shard/: __init__.py  embedding.py  embeddingbag.py
corelib/dynamicemb/example/: DynamicEmb_Quick_Start.ipynb  README.md  example.py  run_example.sh
corelib/dynamicemb/src/: check.h  dynamic_emb_op.cu  dynamic_variable_base.cu  dynamic_variable_base.h  hkv_variable.cuh  hkv_variable.h  index_calculation.cu  index_calculation.h  initializer.cu  initializer.cuh  lookup_backward.cu  lookup_backward.h  lookup_forward.cu  lookup_forward.h  lookup_kernel.cuh  module_bind.cu  optimizer.cu  optimizer.h  optimizer_kernel.cuh  sparse_block_bucketize_features.cu  sparse_block_bucketize_features_utils.h  torch_utils.cu  torch_utils.h  unique_op.cu  unique_op.h  unique_variable.cu  unique_variable.h  utils.cpp  utils.h
corelib/dynamicemb/src/hkv_variable_instantiations/: HKVVariable__int64_t___half_EvictStrategy__kLfu.cu  HKVVariable__int64_t___nv_bfloat16_EvictStrategy__kLfu.cu  HKVVariable__int64_t___nv_bfloat16_EvictStrategy__kLru.cu  HKVVariable__int64_t_float_EvictStrategy__kCustomized.cu  HKVVariable__int64_t_float_EvictStrategy__kLfu.cu  HKVVariable__int64_t_float_EvictStrategy__kLru.cu  HKVVariable__uint64_t___half_EvictStrategy__kCustomized.cu  HKVVariable__uint64_t___half_EvictStrategy__kLfu.cu  HKVVariable__uint64_t___half_EvictStrategy__kLru.cu  HKVVariable__uint64_t___nv_bfloat16_EvictStrategy__kCustomized.cu  HKVVariable__uint64_t___nv_bfloat16_EvictStrategy__kLfu.cu  HKVVariable__uint64_t___nv_bfloat16_EvictStrategy__kLru.cu  HKVVariable__uint64_t_float_EvictStrategy__kCustomized.cu  HKVVariable__uint64_t_float_EvictStrategy__kLfu.cu  HKVVariable__uint64_t_float_EvictStrategy__kLru.cu
corelib/dynamicemb/src/table_operation/: erase.cu  expand_table_ids_torch_binding.cu  export_batch.cu  get_table_range_torch_binding.cu  insert.cu  insert_and_evict.cu  kernels.cuh  lookup.cu  lookup_torch_binding.cu  score.cuh  table.cu  table.cuh  types.cuh
corelib/dynamicemb/test/: test_batched_dynamic_embedding_tables.py  test_batched_dynamic_embedding_tables_v2.py  test_optimizer.py  test_unique_op.py  unit_test.sh
corelib/dynamicemb/test/unit_tests/: debug.py  test_alignment.py  test_alignment.sh  test_dynamicemb_table_dump_load.py  test_dynamicemb_table_dump_load.sh  test_embedding_admission.py  test_embedding_admission.sh  test_embedding_dump_load.py  test_embedding_dump_load.sh  test_hash_roundrobin_kuairand.py  test_hybrid_storage_export.py  test_lfu_score_validation.py  test_lfu_scores.py  test_multi_embedding_collection_fw.py  test_pooled_embedding.sh  test_pooled_embedding_bw.py  test_pooled_embedding_fw.py  test_sequence_embedding.sh  test_sequence_embedding_bw.py  test_sequence_embedding_fw.py  test_table_operation.py  test_table_operation.sh  test_table_operation_dump_load.py  test_twin_module.py  test_twin_module.sh
corelib/dynamicemb/test/unit_tests/incremental_dump/: test_batched_dynamicemb_tables.py  test_distributed_dynamicemb.py  test_dynamicemb_extensions.py  test_incremental_dump.sh
corelib/dynamicemb/test/unit_tests/table_operation/: test_dump_load_different_rank.py  test_dump_load_same_rank.py  test_table_operation.py  test_table_operation.sh
corelib/hstu/: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py  test.py
corelib/hstu/csrc/hstu_attn/: flash_api.cpp  hstu_api.cpp
corelib/hstu/csrc/hstu_attn/src/: block_info.h  hstu.h  hstu_bwd.h  hstu_fwd.h  kernel_traits.h  static_switch.h  utils.h
corelib/hstu/hopper/: Makefile  epilogue_bwd_sm90_tma.hpp  epilogue_fwd_sm90_tma.hpp  flash.h  flash_api.cpp  flash_attn_interface.py  flash_bwd_kernel.h  flash_fwd_kernel.h  hstu.h  hstu_api.cpp  hstu_attn_interface.py  hstu_bwd_kernel.h  hstu_bwd_launch_template.h  hstu_bwd_postprocess_kernel.h  hstu_fwd_kernel.h  hstu_fwd_launch_template.h  kernel_traits.h  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  named_barrier.hpp  seq_len.h  setup.py  static_switch.h  tile_scheduler.hpp  tile_scheduler_bwd.hpp  utils.h
corelib/hstu/hopper/instantiations/: flash_bwd_hdim128_e4m3_sm90.cu  flash_bwd_hdim128_fp16_sm90.cu  flash_bwd_hdim256_bf16_sm90.cu  flash_bwd_hdim256_e4m3_sm90.cu  flash_bwd_hdim32_bf16_sm90.cu  flash_bwd_hdim32_fp16_sm90.cu  flash_bwd_hdim64_bf16_sm90.cu  flash_bwd_hdim64_fp16_sm90.cu  flash_fwd_hdim256_bf16_sm90.cu  flash_fwd_hdim32_bf16_sm90.cu  flash_fwd_hdim64_bf16_sm90.cu  flash_fwd_hdim64_e4m3_sm90.cu  flash_fwd_hdim64_fp16_sm90.cu
corelib/hstu/hstu_attn/: __init__.py  hstu_attn_interface.py
distributed_recommender/: __init__.py  requirements.txt  setup.py  tutorial.py
docker/: Dockerfile  Dockerfile.nve  Dockerfile.pyt_build
docs/: requirements.txt
examples/hstu/inference/aoti_demo/: CMakeLists.txt
examples/hstu/inference/cpp_inference/: CMakeLists.txt  inference_hstu_gr_ranking_exported_model.cpp
(+389 files in other folders)
